# pyc3dsample

./: README.md  pyproject.toml
data/: testsample2.c3d
examples/: README.md
src/pyc3dsample/: pyc3dsample.py
tests/: basicfunctions.py  testsample.c3d
