[project]
name = "pyc3dsample"
version = "0.1.0"
description = "Interface to easily deal with a C3D file, including some helpful methods for dealing with gait analysis (e.g. detecting heel strike)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
pyc3dsample = "pyc3dsample:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
